Atualizada documentacao
